--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -65,7 +65,7 @@ Your public key will change on Solana but the private key will remain the same.
 
 :::note Close Ledger Live
 
-Before starting these steps, close the Ledger Live application or the migration will fail.
+Before starting these steps, close the Ledger Live application or the transactions will fail.
 
 :::
 
