--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -56,6 +56,7 @@ minimum amount of SOL in case you need to fund additional accounts in the future
 
 <figure className="screensnippet-wrapper">
   <iframe
+    style={{ margin: '10px', borderRadius: '14px' }}
     width="560"
     height="315"
     src="https://www.youtube.com/embed/maxW3cjCrcQ"
