tokens and governance update

--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -5,7 +5,7 @@ pagination_label: Community Governance
 sidebar_label: Community Governance
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /community-governance
+slug: /governance
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -27,7 +27,7 @@ Network. It is also the primary venue to get support for using the Network.
 ## Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
-"HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and
+"HIPs"). Modeled on BIPs from the Bitcoin community, as well as pulling from influences of open-source development, HIPs are used to introduce, debate, and
 approve/reject new changes to major elements of the Network like the core blockchain,
 $HNT, $IOT
 $MOBILE token economics, and Network governance itself.
@@ -43,6 +43,17 @@ discussion also happens in the `Improvement Proposal` channels of
 encouraged to create HIPs, and participate in the governance process.
 
 - [HIP Repo on GitHub](https://github.com/helium/HIP)
+
+Learn more about HIPs [here]()
+
+## Realms
+
+[Realms] (realms.today) is a Solana native tool for DAO infrastructure. As part of the migration to the Solana Blockchain, the Helium Community adopted Realms as it's tool for staking, delegating and on-chain voting.
+This tool replaces Helium Vote.
+
+Read [this page](XXX) to learn how to navigate Realms.
+
+- Join the [Helium DAO](www.realms.heliumvote.com/dao/hnt), [IOT DAO](www.realms.heliumvote.com/dao/iot) or [MOBILE DAO](www.realms.heliumvote.com/dao/mobile) on Realms.
 
 ## Monthly Community Calls
 
