--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -8,10 +8,17 @@ If neither of these work, make sure you have your 12 words saved, and reinstall 
 ## Why does my account have a small amount of SOL that wasn’t there before?
 The Helium Foundation was kind enough to provide every wallet that completes the migration process with 0.00139 SOL for Solana transaction fees, this is enough to cover 100 token transfer transactions.
 If you see 1 SOL, you may be on the devnet instead of the mainnet view of the wallet, be sure to switch to mainnet in the settings if it’s not already.
-If mainnet is already selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
+If you can still see 1 SOL while mainnet is selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
 
 ## Why can't I see my hotspot’s activity and rewards?
-Due to the migration, third party applications need to update their services, in the meantime, you can use applications like Helium Geek and Hotspotty, though some work may still need to be done for those apps in the coming days to see all current activity.
+Due to the migration, third party applications need to update their services.
+In the meantime, you can use applications like [Helium Geek](https://heliumgeek.com/) and [Hotspotty](https://app.hotspotty.net/), though some work may still need to be done for those apps in the coming days to see all current activity.
 
 ## What is this new IOT token?
-IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info [here](https://docs.helium.com/helium-tokens/iot).
+IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
+
+## How do I stake my tokens?
+You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Ralms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this doc](https://docs.helium.com/vote-escrow/realms/).
+:::note
+You cannot delegate veIOT and veMOBILE at this time, only veHNT.
+:::
