--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -19,6 +19,11 @@ IOT is the newest token on the Helium Network, instead of earning HNT, hotspots 
 
 ## How do I stake my tokens?
 You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Ralms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this doc](https://docs.helium.com/vote-escrow/realms/).
-:::note
+
 You cannot delegate veIOT and veMOBILE at this time, only veHNT.
+
+:::note
+
+This is a note
+
 :::
