--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -271,6 +271,12 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 ### MNTD / RAK Wireless
 
+:::note Use Hotspotty Connect
+
+Note that Hotspotty Connect has taken over management of the MNTD/RAK maker app. the links below are accurate for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
+
+:::
+
 - Discord : https://discord.gg/j92Nu5nmP9
 - iOS App: https://apps.apple.com/app/hotspotty-connect/id1622212036
 - Android App: https://play.google.com/store/apps/details?id=com.hotspottyconnect
