--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -273,7 +273,7 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 :::note Use Hotspotty Connect
 
-Note that Hotspotty Connect has taken over management of the MNTD/RAK maker app. the links below are accurate for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
+Hotspotty Connect has taken over management of the MNTD/RAK maker app. The links below are accurate for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
 
 :::
 
