--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -271,9 +271,15 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 ### MNTD / RAK Wireless
 
+:::note Use Hotspotty Connect
+
+Hotspotty Connect has taken over management of the MNTD/RAK maker app. The links below are accurate for the Hotspotty Connect apps which should be used with all MNTD and RAK Wireless Hotspots.
+
+:::
+
 - Discord : https://discord.gg/j92Nu5nmP9
-- iOS App: https://apps.apple.com/ch/app/mntd-helium-hotspot-manager/id1595569593
-- Android App: https://play.google.com/store/apps/details?id=com.getmntd.wallet
+- iOS App: https://apps.apple.com/app/hotspotty-connect/id1622212036
+- Android App: https://play.google.com/store/apps/details?id=com.hotspottyconnect
 
 ---
 
