--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -45,7 +45,7 @@ This error is given when your wallet does not have enough SOL to proceed with th
 Unless your wallet already has at least .014 SOL, you won’t be able to stake until it does so.
 
 ## How can I easily swap HNT for SOL to get extra SOL into my wallet for fees?
-There is another great service being provided in [this](https://docs.helium.com/helium-tokens/sol-token/) Helium Doc.
+There is another great service being provided in [this doc]((https://docs.helium.com/helium-tokens/sol-token/)).
 You can use it to swap some HNT for .02 SOL by following the instructions provided on the page.
 
 ## When do I get my first rewards for delegations?
