--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -1,4 +1,4 @@
-# FAQ - Migration
+# FAQ - Solana Migration
 
 ## Why does my Helium Wallet app crash when I open it?
 The Helium Wallet app needs to be updated to version 2.0.5 or later, this fixes the app crashing and other bugs which allows you to continue onto the migration process.
