--- a/docs/faq/migration.mdx
+++ b/docs/faq/migration.mdx
@@ -62,7 +62,7 @@ Here are 2 ways you can get your new Helium address:
 1. In the Helium Wallet app, Settings > Copy Address > Solana.
 2. Using another service Foundation is providing, you can go to <https://migration.web.helium.io/helium/pasteOldAddressHere> and it will return your new address.
 
-## How can I fix the hotspots missing on the Helium Wallet app?
+## How can I fix hotspots missing on the Helium Wallet app?
 If you are missing hotspots in the Hotspots tab on the Helium Wallet, click the Filter button and select All, this should fix the missing hotspot issue.
 
 ## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this doc](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot)?
