--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -65,7 +65,7 @@ Here are 2 ways you can get your new Helium address:
 ## How can I fix hotspots missing on the Helium Wallet app?
 If you are missing hotspots in the Hotspots tab on the Helium Wallet, click the Filter button and select All, this should fix the missing hotspot issue.
 
-## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this Helium Doc](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot)?
+## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot) Helium Doc?
 Due to data transfer not being coded as an activity for a hotspot during migration, data only hotspots and hotspots that only had data transfer within 30 days of the migration had been left out of the IOT airdrop.
 There is currently a HIP being worked on to fix this issue by getting the hotspots that missed the airdrop due to this error their IOT.
 
