--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -18,7 +18,7 @@ In the meantime, you can use applications like [Helium Geek](https://heliumgeek.
 IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
 
 ## How do I stake my tokens?
-You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Ralms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this doc](https://docs.helium.com/vote-escrow/realms/).
+You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Ralms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this](https://docs.helium.com/vote-escrow/realms/) Helium Doc.
 :::note
 You cannot delegate veIOT and veMOBILE at this time, only veHNT.
 :::
@@ -38,14 +38,14 @@ Now the epochs are 24 hours long, so you will get your rewards for all the activ
 ##  Is it possible to migrate the wallet without having to log into the Helium Wallet app?
 Yes!
 The Helium Foundation is providing a service that migrates the wallet for you directly from the Helium Docs website!
-Simply go to [this doc](https://docs.helium.com/solana/migration/exchange/#mapping-helium-wallets-to-solana-wallets) and paste your old Helium address into the entry box and click the “Seed Wallet” button, give it a few seconds and now your wallet should be migrated over to Solana.
+Simply go to [this](https://docs.helium.com/solana/migration/exchange/#mapping-helium-wallets-to-solana-wallets) Helium Doc and paste your old Helium address into the entry box and click the “Seed Wallet” button, give it a few seconds and now your wallet should be migrated over to Solana.
 
 ## Why am I getting the {"InstructionError":[0, {"Custom":1}]} error when I try to stake?
 This error is given when your wallet does not have enough SOL to proceed with the transaction.
 Unless your wallet already has at least .014 SOL, you won’t be able to stake until it does so.
 
 ## How can I easily swap HNT for SOL to get extra SOL into my wallet for fees?
-There is another great service being provided in [this doc]((https://docs.helium.com/helium-tokens/sol-token/)).
+There is another great service being provided in [this](https://docs.helium.com/helium-tokens/sol-token/) Helium Doc
 You can use it to swap some HNT for .02 SOL by following the instructions provided on the page.
 
 ## When do I get my first rewards for delegations?
