--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -18,7 +18,7 @@ In the meantime, you can use applications like [Helium Geek](https://heliumgeek.
 IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
 
 ## How do I stake my tokens?
-You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Ralms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this](https://docs.helium.com/vote-escrow/realms/) Helium Doc.
+You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Realms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this](https://docs.helium.com/vote-escrow/realms/) Helium Doc.
 :::note
 You cannot delegate veIOT and veMOBILE at this time, only veHNT.
 :::
