--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -10,29 +10,53 @@ slug: /oracles/price-oracles
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The [Price Oracle](/blockchain/oracles) is one of many Oracles on the Helium Network. The Price
-Oracle is required on-chain as the price of HNT is needed to calculate HNT to burn when minting Data
-Credits (DC).
+The price oracle is one of many oracles on the Helium Network. The market value of tokens are
+required on-chain as the price is needed to calculate everything from HNT burning for Data Credits
+(DC) to treasury allocations for the Mobile and IoT networks.
 
-## Post Migration Implementation
+## Post-Migration Implementation
 
-With the migration to the Solana L1, the Helium Network takes advantage of the larger Solana
-ecosystem.
+:::note The Next Step
 
-The Helium Network on Solana uses the tried and tested [Pyth Network](https://pyth.network/), which
-publishes financial market data.
+On the day of the chain migration, price feeds were not available for all tokens. Once a stable
+price feed is available, community-sourced price feeds can be removed in favor or Pyth.
 
-At an overview, Pyth works by having publishers (exchanges and market makings firms) submit price
-points for given coin pair values and then aggregates this data and makes it available on-chain.
+:::
+
+### Who are the HNT Price Oracles?
+
+The community-sourced oracle price feeds are supplied by a group of eleven (11) oracles, composed of
+companies, organizations, and individuals. These oracles were selected at the activation of Data
+Credits on the Helium L1 blockchain and have proven to be a trusted source of data for the Helium
+Network. The oracle pool is comprised of:
+
+- Helium Foundation
+- Nova Labs
+- Nine (9) Anonymous Individual Community Members
+
+The names of the individual feed contributors are kept anonymous as it's essential to prevent any
+external attempts at collusion.
+
+You can see the current oracle prices here:
+
+- [HNT Price Oracle](https://explorer.solana.com/address/horUtvuHQFWxPFrZ35YZUmXUZ2TSQdSXhcD4kkCVNKi/anchor-account)
+- [IOT Price Oracle](https://explorer.solana.com/address/iortGU2NMgWc256XDBz2mQnmjPfKUMezJ4BWfayEZY3/anchor-account)
+- [MOBILE Price Oracle](https://explorer.solana.com/address/moraMdsjyPFz8Lp1RJGoW4bQriSF5mHE7Evxt7hytSF/anchor-account)
+
+<!-- TODO: After oracle functionality is migrated to Pyth, delete 'Post-Migration' above and change below to 'Pyth Price Oracle'. -->
+
+## 🔜 Full Solana Implementation
+
+The Helium Network uses the tried and tested [Pyth Network](https://pyth.network/), which publishes
+financial market data. As an overview, Pyth works by having publishers (exchanges and market makings
+firms) submit price points for given coin pair values and then aggregates this data, making it
+available on-chain.
 
 Pyth's
 [exponentially-weighted moving average (EMA) price aggregation](https://docs.pyth.network/how-pyth-works/ema-price-aggregation)
 adds time to the aggregation with a heavier weight given to more recent price samples, smoothing the
-price and controlling for outliers and further increases trust in the price and helps shield against
-potential bad actors.
-
-An out-of-the-box Price Oracle solution means fewer developer requirements for the Helium core
-developers and ensures more reliable service.
+price and controlling for outliers to help further increase trust in the price and help shield
+against potential bad actors.
 
 ```mermaid
 %%{ init: { 'flowchart': { 'curve': 'linear' } } }%%
