--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -72,7 +72,7 @@ This HNT to DC relationship is based on a design commonly called a
 intended to allow for the supply of HNT to respond to network usage trends such that, when
 equilibrium is found, the amount of HNT that exists remains static month on month. The amount of
 Data Credits produced by burning HNT will move up and down based on the USD price of HNT as reported
-by the [HNT Price Oracles](/blockchain/oracles). Below are a few examples of how this works
+by the HNT [Price Oracles](/oracles/price-oracles). Below are a few examples of how this works
 on-chain.
 
 **Example 1**
