--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -36,11 +36,10 @@ and the Helium app uses
 [implicit burn](https://docs.helium.com/blockchain/transaction-fees/#transaction-fees-and-implicit-burn)
 to determine the appropriate amount of HNT to burn to generate these DCs.
 
-How much HNT to burn depends on the
-[Oracle price](https://docs.helium.com/blockchain/oracles/#hnt-price-oracles). The Oracle price is
-the median $HNT price from a list of individual oracles and used to weather large swings in price.
-In special cases, the price of $HNT may shift enough in a short time period such that the amount of
-HNT burned to generate DCs _is not enough_.
+How much HNT to burn depends on the Oracle price. The Oracle price is the median $HNT price from a
+list of individual oracles and used to weather large swings in price. In special cases, the price of
+$HNT may shift enough in a short time period such that the amount of HNT burned to generate DCs _is
+not enough_.
 
 :::info
 
