--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -42,7 +42,7 @@ Simply go to [this](https://docs.helium.com/solana/migration/exchange/#mapping-h
 
 ## Why am I getting the {"InstructionError":[0, {"Custom":1}]} error when I try to stake?
 This error is given when your wallet does not have enough SOL to proceed with the transaction.
-Unless your wallet already has at least just over 0.016 SOL, you won’t be able to stake until it does so.
+Unless your wallet already has just over 0.016 SOL, you won’t be able to stake until it does so.
 
 ## How can I easily swap HNT for SOL to get extra SOL into my wallet for fees?
 There is another great service being provided in [this](https://docs.helium.com/helium-tokens/sol-token/) Helium Doc
