--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -40,7 +40,7 @@ Yes!
 The Helium Foundation is providing a service that migrates the wallet for you directly from the Helium Docs website!
 Simply go to [this](https://docs.helium.com/solana/migration/exchange/#mapping-helium-wallets-to-solana-wallets) Helium Doc and paste your old Helium address into the entry box and click the “Seed Wallet” button, give it a few seconds and now your wallet should be migrated over to Solana.
 
-## Why am I getting the {"InstructionError":[0, {"Custom":1}]} error when I try to stake?
+## Why am I getting the `{"InstructionError":[0, {"Custom":1}]}` error when I try to stake?
 This error is given when your wallet does not have enough SOL to proceed with the transaction.
 Unless your wallet already has just over 0.016 SOL, you won’t be able to stake until it does so.
 
@@ -63,7 +63,7 @@ Here are 2 ways you can get your new Helium address:
 2. Using another service Foundation is providing, you can go to <https://migration.web.helium.io/helium/pasteOldAddressHere> and it will return your new address.
 
 ## How can I fix hotspots missing on the Helium Wallet app?
-If you are missing hotspots in the Hotspots tab on the Helium Wallet, click the Filter button and select All, this should fix the missing hotspot issue.
+If you are missing hotspots in the Hotspob on the Helium Wallet, click the Filter button and select All, this should fix the missing hotspot issue.
 
 ## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot) Helium Doc?
 Due to data transfer not being coded as an activity for a hotspot during migration, data only hotspots and hotspots that only had data transfer within 30 days of the migration had been left out of the IOT airdrop.
