--- a/docs/faq/solana-migration.mdx
+++ b/docs/faq/solana-migration.mdx
@@ -10,12 +10,12 @@ The Helium Foundation was kind enough to provide every wallet that completes the
 If you see 1 SOL, you may be on the devnet instead of the mainnet view of the wallet, be sure to switch to mainnet in the settings if it’s not already.
 If you can still see 1 SOL while mainnet is selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
 
-## Why can't I see my hotspot’s activity and rewards?
+## Why can't I see my Hotspot’s activity and rewards?
 Due to the migration, third party applications need to update their services.
 In the meantime, you can use applications like [Helium Geek](https://heliumgeek.com/) and [Hotspotty](https://app.hotspotty.net/), though some work may still need to be done for those apps in the coming days to see all current activity.
 
 ## What is this new IOT token?
-IOT is the newest token on the Helium Network, instead of earning HNT, hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
+IOT is the newest token on the Helium Network, instead of earning HNT, Hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
 
 ## How do I stake my tokens?
 You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Realms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this](https://docs.helium.com/vote-escrow/realms/) Helium Doc.
@@ -31,7 +31,7 @@ The current treasury sizes for the tokens are very low, therfore you may be seei
 :::
 2. Using a DEX like [Jupiter](https://jup.ag) or [Orca](https://orca.so)
 
-## Why don’t I see my rewards after my hotspot does PoC or transfers data?
+## Why don’t I see my rewards after my Hotspot does PoC or transfers data?
 Before the migration, epochs used to be 30 blocks (about 30 minutes) long, and at the end of each epoch rewards would be distributed.
 Now the epochs are 24 hours long, so you will get your rewards for all the activity your hotspot has within an epoch at the end of it, basically once a day.
 
@@ -62,10 +62,9 @@ Here are 2 ways you can get your new Helium address:
 1. In the Helium Wallet app, Settings > Copy Address > Solana.
 2. Using another service Foundation is providing, you can go to <https://migration.web.helium.io/helium/pasteOldAddressHere> and it will return your new address.
 
-## How can I fix hotspots missing on the Helium Wallet app?
-If you are missing hotspots in the Hotspob on the Helium Wallet, click the Filter button and select All, this should fix the missing hotspot issue.
+## How can I fix Hotspots missing on the Helium Wallet app?
+If you are missing Hotspots in the Hotspob on the Helium Wallet, click the Filter button and select All, this should fix the missing Hotspot issue.
 
 ## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot) Helium Doc?
-Due to data transfer not being coded as an activity for a hotspot during migration, data only hotspots and hotspots that only had data transfer within 30 days of the migration had been left out of the IOT airdrop.
-There is currently a HIP being worked on to fix this issue by getting the hotspots that missed the airdrop due to this error their IOT.
-
+Due to data transfer not being coded as an activity for a Hotspot during migration, data only Hotspots and Hotspots that only had data transfer within 30 days of the migration had been left out of the IOT airdrop.
+There is currently a HIP being worked on to fix this error.
