Noting Helius as an option.

--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -403,10 +403,11 @@ rewards.map(reward => {
 
 :::info
 
-The claim example in this section requires a connection to an RPC node
-(provider) that understands compressed NFTs. This is an advanced feature that
-is not yet supported by Solana's public RPC servers. **This example
-will not work unless you use an appropriate RPC provider.**
+The claim example in this section requires a connection to an RPC node (provider) that understands
+compressed NFTs. This is an advanced feature that is not yet supported by Solana's public RPC
+servers.  
+**This example will not work unless you use an appropriate RPC provider such as
+[Helius](https://www.helius.xyz/).**
 
 :::
 
