--- a/docs/solana/migration/faq.mdx
+++ b/docs/solana/migration/faq.mdx
@@ -1,70 +1,116 @@
+---
+id: migration-faq
+title: Migration FAQ
+pagination_label: Migration FAQ
+sidebar_label: Migration FAQ
+description: Helium Documentation
+image: https://docs.helium.com/img/link-image.png
+slug: /solana/migration/faq
+---
+
 # FAQ - Solana Migration
 
-## Why does my Helium Wallet app crash when I open it?
-The Helium Wallet app needs to be updated to version 2.0.5 or later, this fixes the app crashing and other bugs which allows you to continue onto the migration process.
-If your device's App/Play Store is not showing an update button, make sure to check manually by clicking onto the app inside the store to see more info, and the button should show “Update” instead of “Open”.
-If neither of these work, make sure you have your 12 words saved, and reinstall the app.
+## Why Does My Helium Wallet App Crash When I Open It?
 
-## Why does my account have a small amount of SOL that wasn’t there before?
-The Helium Foundation was kind enough to provide every wallet that completes the migration process with 0.00139 SOL for Solana transaction fees, this is enough to cover 100 token transfer transactions.
-If you see 1 SOL, you may be on the devnet instead of the mainnet view of the wallet, be sure to switch to mainnet in the settings if it’s not already.
-If you can still see 1 SOL while mainnet is selected, this is one of the few display errors which can be fixed by switching to devnet and back to mainnet, or updating the app.
+The Helium Wallet app must be updated to version `2.0.5` or later.
 
-## Why can't I see my Hotspot’s activity and rewards?
-Due to the migration, third party applications need to update their services.
-In the meantime, you can use applications like [Helium Geek](https://heliumgeek.com/) and [Hotspotty](https://app.hotspotty.net/), though some work may still need to be done for those apps in the coming days to see all current activity.
+If your device's App/Play Store is not showing an update button, check manually by clicking on the
+app inside the store to see more info, and the button should show "Update" instead of "Open".
 
-## What is this new IOT token?
-IOT is the newest token on the Helium Network, instead of earning HNT, Hotspots will earn IOT rewards for their PoC and data transfer which can be swapped for HNT in the app or using an exchange. You can find more info about IOT [here](https://docs.helium.com/helium-tokens/iot).
+If neither works, save your [seed phrase](/wallets/wallet-seed-phrase), and reinstall the app.
 
-## How do I stake my tokens?
-You can stake your tokens using [Realms](https://realms.heliumvote.com/dao/hnt) to which the links can be found in the Helium Wallet app by clicking the globe icon on the bottom right and choosing one of the 3 provided Realms links matching the token you want to stake. After this, follow the directions on how to lock the tokens and delegate them using [this](https://docs.helium.com/vote-escrow/realms/) Helium Doc.
-:::note
-You cannot delegate veIOT and veMOBILE at this time, only veHNT.
-:::
+## Why Does My Account Have A Small Amount Of SOL?
 
-## How can I exchange or see the exchange rate for my tokens?
+Every migrated wallet was seeded with a small amount, approximately 0.00139, of SOL for
+transactions, enough for roughly 100 transactions.
+
+If a wallet displays 1 SOL, the app may be on the `devnet` instead of the `mainnet-beta` view of the
+wallet, be sure to switch to `mainnet-beta` in settings if it's not already.
+
+If the wallet still shows 1 SOL while `mainnet-beta` is selected, this display error may resolve by
+switching to `devnet` and back to `mainnet-beta`, or updating the app.
+
+## Where Can I See My Hotspot's Activity And Rewards?
+
+Oracle Data is available to application developers such as [Helium Geek](https://heliumgeek.com/)
+and [Hotspotty](https://app.hotspotty.net/), which are building interfaces to monitor Hotspot
+activity and rewards.
+
+## What Is The IOT Token?
+
+Instead of earning HNT, Hotspots will earn IOT rewards for their PoC and data transfer. IOT can be
+swapped for HNT in the Helium Wallet app or on an exchange. Find more info about IOT
+[here](/helium-tokens/IOT).
+
+## How Do I Stake My Tokens?
+
+Staking tokens uses [Realms](https://realms.heliumvote.com/dao/hnt) and can be done in the Helium
+Wallet app.
+
+More instructions are available [here](/vote-escrow/realms/).
+
+## How Can I Exchange Or See The Exchange Rate For My Tokens?
+
 Here are 2 ways to do this:
-1. On the home screen in the Helium Wallet app, there is an orange button for swapping, clicking this button brings you to a section in the app where you can swap your IOT or MOBILE for HNT.
+
+1. On the home screen in the Helium Wallet app, there is an orange button for swapping tokens using
+   the Treasury.
+
 :::warning
-The current treasury sizes for the tokens are very low, therfore you may be seeing large amounts of tokens only being able to be swapped for low amounts of HNT, it is recommended to wait for the treasuries to fill up with HNT over time before using this feature.
+
+Treasuries for each Network are very low right now. However, better rates for swapping tokens may be
+available using other services.
+
 :::
+
 2. Using a DEX like [Jupiter](https://jup.ag) or [Orca](https://orca.so)
 
-## Why don’t I see my rewards after my Hotspot does PoC or transfers data?
-Before the migration, epochs used to be 30 blocks (about 30 minutes) long, and at the end of each epoch rewards would be distributed.
-Now the epochs are 24 hours long, so you will get your rewards for all the activity your hotspot has within an epoch at the end of it, basically once a day.
+## Why are there so few rewards transactions?
 
-##  Is it possible to migrate the wallet without having to log into the Helium Wallet app?
-Yes!
-The Helium Foundation is providing a service that migrates the wallet for you directly from the Helium Docs website!
-Simply go to [this](https://docs.helium.com/solana/migration/exchange/#mapping-helium-wallets-to-solana-wallets) Helium Doc and paste your old Helium address into the entry box and click the “Seed Wallet” button, give it a few seconds and now your wallet should be migrated over to Solana.
+Rewards are distributed after each epoch, at approximately 1:30 AM UTC daily.
 
-## Why am I getting the `{"InstructionError":[0, {"Custom":1}]}` error when I try to stake?
-This error is given when your wallet does not have enough SOL to proceed with the transaction.
-Unless your wallet already has just over 0.016 SOL, you won’t be able to stake until it does so.
+Hotspots receive rewards for all the activity within an epoch as one sum.
 
-## How can I easily swap HNT for SOL to get extra SOL into my wallet for fees?
-There is another great service being provided in [this](https://docs.helium.com/helium-tokens/sol-token/) Helium Doc
-You can use it to swap some HNT for .02 SOL by following the instructions provided on the page.
+## Is It Possible To Migrate A Wallet Without Having To Log Into The Helium Wallet App?
 
-## When do I get my first rewards for delegations?
-Let’s say you delegate your veHNT towards a subDAO during epoch N, you will get your first delegation rewards at the end of epoch N + 1.
-So if you delegate for example during epoch 2, you will get your first rewards at the end of epoch 3, and then continue to get rewards at the end of the epochs following that one.
+Yes, Wallets can be migrated directly within the Helium docs
+[here](/solana/migration/exchange/#mapping-helium-wallets-to-solana-wallets)
 
-## What is the difference between the Cliff and Constant locks?
+Enter an old Helium address into the entry box and click the "Seed Wallet" button, give it a few
+seconds, and the wallet will be migrated over to Solana.
+
+## Why Am I Getting The {"Instructionerror":[0, {"Custom":1}]} Error When I Try To Stake?
+
+This error occurs when a wallet does not have enough SOL to proceed with a transaction. For example,
+a wallet will need approximately 0.02 SOL to stake.
+
+Use the [HNT-SOL Swapping widget](/helium-tokens/sol-token/ in the Helium docs to swap HNT for SOL
+as needed.
+
+## When Do I Get My First Rewards For Delegations?
+
+Rewards for delegations are distributed in the epoch following the delegation.
+
+For example, a delegation in epoch 10 will receive a rewards distribution at the end of epoch 11 and
+every following epoch in which the delegation is unchanged.
+
+## What Is The Difference Between The Cliff And Constant Locks?
+
 You can find the explanation for the two in the Helium Docs:
-* [Cliff](https://docs.helium.com/vote-escrow/realms/#cliff)
-* [Constant](https://docs.helium.com/vote-escrow/realms/#constant)
 
-## How can I get the new address to my wallet?
+- [Cliff](/vote-escrow/realms/#cliff)
+- [Constant](/vote-escrow/realms/#constant)
+
+## How Can I Get The New Address To My Wallet?
+
 Here are 2 ways you can get your new Helium address:
+
 1. In the Helium Wallet app, Settings > Copy Address > Solana.
-2. Using another service Foundation is providing, you can go to <https://migration.web.helium.io/helium/pasteOldAddressHere> and it will return your new address.
+2. Using another service Foundation is providing, you can go to
+   `https://migration.web.helium.io/helium/<HNT-Wallet-Address>` and it will return your new
+   address.
 
-## How can I fix Hotspots missing on the Helium Wallet app?
-If you are missing Hotspots in the Hotspob on the Helium Wallet, click the Filter button and select All, this should fix the missing Hotspot issue.
+## How Can I Fix Hotspots Missing On The Helium Wallet App?
 
-## Why didn't my hotspot get the IOT airdrop even though it fell under the active category as defined in [this](https://docs.helium.com/solana/migration/hotspot-operator/#what-is-an-active-hotspot) Helium Doc?
-Due to data transfer not being coded as an activity for a Hotspot during migration, data only Hotspots and Hotspots that only had data transfer within 30 days of the migration had been left out of the IOT airdrop.
-There is currently a HIP being worked on to fix this error.
+If you are missing Hotspots in the Hotspots tab on the Helium Wallet, click the Filter button and
+select All and pull to refresh the page.
