--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -10,9 +10,8 @@ slug: /mine-hnt/validators/validators-and-voting-power
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Helium Foundation has implemented HIP-70 and migrated our L1 to Solana. Voting on Helium 
+The Helium Foundation has implemented HIP-70 and migrated our L1 to Solana. Voting on Helium
 Improvement Proposals is performed with vote eskrowed tokens.
-
 
 ## Key Take Aways
 
@@ -39,8 +38,8 @@ of HNT is released back to the owner's wallet and is now transferable, if needed
 
 ### What Are The Benefits of Staking HNT after the subDAOs launch
 
-Now the Solana migration has completed, stakers can use their staked veHNT to vote on proposals 
-in the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
+Now the Solana migration has completed, stakers can use their staked veHNT to vote on proposals in
+the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
 
 Stakers will additionally be able to delegate veHNT to a subDAO for token rewards. Delegating veHNT
 to a subDAO will count towards the DAO Utility Score, the `V` value referenced in
@@ -126,13 +125,13 @@ wishing to extend the lock-up duration on parts of a Position requires a similar
 
 ### How Can I Obtain veHNT?
 
-Staking HNT for veHNT will be done on [Realms](https://realms.heliumvote.com/dao/hnt)
-See the [Staking veHNT on Realms](https://docs.helium.com/vote-escrow/realms) documentation
+Staking HNT for veHNT will be done on [Realms](https://realms.heliumvote.com/dao/hnt) See the
+[Staking veHNT on Realms](https://docs.helium.com/vote-escrow/realms) documentation
 
 ### Is There a Staking "Genesis" Period?
 
-For the first ten days after Helium's migration onto Solana, there will be a 3x multiplier bonus
-for new veHNT stakers. This is called the "Landrush" multiplier.
+For the first ten days after Helium's migration onto Solana, there will be a 3x multiplier bonus for
+new veHNT stakers. This is called the "Landrush" multiplier.
 
 New stakers are only eligible to receive this veHNT bonus during the initial ten-day Landrush
 period. HNT staked after this period will receive veHNT at the normal rate with no multiplier.
@@ -199,8 +198,8 @@ delegation rewards within that Epoch. A Solana Epoch is 24 hours long and starts
 
 ### How Granular Is The veHNT Linear Decrease?
 
-The veHNT decay countdown starts when initiated from the Wallet app/Realms, either immediately
-in "cliff" mode or after a "constant lockup" is unlocked and cooldown started.
+The veHNT decay countdown starts when initiated from the Wallet app/Realms, either immediately in
+"cliff" mode or after a "constant lockup" is unlocked and cooldown started.
 
 veHNT quantity decay is granulated per second even though the Epoch period is 24 hours.
 
@@ -218,10 +217,10 @@ remaining 48 months until it hits zero.
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period by extending to the maximum of 48 months at any time, and
-the increase activates at the start of the next epoch. If the veHNT is delegated you must undelegate, 
-change the period and redelegate and lose delegation rewards within that 24 hour Epoch. If those three 
-actions take longer than an epoch or are split over two epochs then delegation rewards are lost for two
-Epochs.
+the increase activates at the start of the next epoch. If the veHNT is delegated you must
+undelegate, change the period and redelegate and lose delegation rewards within that 24 hour Epoch.
+If those three actions take longer than an epoch or are split over two epochs then delegation
+rewards are lost for two Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
@@ -230,8 +229,8 @@ period for any reason.
 
 ### Can I Automate Re-Staking?
 
-Yes a constant rolling lock-up period is available called Constant Lock-up. The decay
-countdown start point will be positive action needed to start the lock-up cooldown period.
+Yes a constant rolling lock-up period is available called Constant Lock-up. The decay countdown
+start point will be positive action needed to start the lock-up cooldown period.
 
 > Staking 10 HNT for 4 years will get approx 1000 veHNT and this will be a rolling 4 year period and
 > will remain at 1000 veHNT until the decay countdown is activated and this will then decrease
